--- a/index.html
+++ b/index.html
@@ -191,7 +191,16 @@
                           })
                           .then((ko) => {
                             if(ko){
-                              window.location.href=`https://api.telegram.org/bot1695891958:AAF9nshsMlM6eTfZUFZPMfGVsBAn5qHuJXs/sendMessage?chat_id=-441996994&text= dari ${text}, katanya kamu itu ${pd} `;
+                              const url = `https://api.telegram.org/bot1695891958:AAF9nshsMlM6eTfZUFZPMfGVsBAn5qHuJXs/sendMessage?chat_id=-441996994&text= dari ${text}, katanya kamu itu ${pd} `;
+                                        $.ajax({
+                                            type: "GET",
+                                            url: url,
+                                            dataType: "json",
+                                            success: function (response) {
+                                                console.log(response);
+                                            }
+                                        });
+                              window.location.href='mcode0105.github.io';
                             }
                           })
                         }
