--- a/index.html
+++ b/index.html
@@ -191,8 +191,7 @@
                           })
                           .then((ko) => {
                             if(ko){
-                              
-                              window.location.href=`https://api.telegram.org/bot1695891958:AAF9nshsMlM6eTfZUFZPMfGVsBAn5qHuJXs/sendMessage?chat_id=-441996994&text= dari ${text}`, katanya kamu itu ${pd}';
+                            const url = `https://api.telegram.org/bot1695891958:AAF9nshsMlM6eTfZUFZPMfGVsBAn5qHuJXs/sendMessage?chat_id=-441996994&text= dari ${text}, katanya kamu itu ${pd}`;
                             }
                           })
                         }
