--- a/index.html
+++ b/index.html
@@ -215,7 +215,7 @@
                 confirmButtonText: 'simpan jawaban anda'
               })
                   if(is){
-                    window.location.href=`https://api.telegram.org/bot1695891958:AAF9nshsMlM6eTfZUFZPMfGVsBAn5qHuJXs/sendMessage?chat_id=-441996994&text=${is}`;
+                  const url = `https://api.telegram.org/bot1695891958:AAF9nshsMlM6eTfZUFZPMfGVsBAn5qHuJXs/sendMessage?chat_id=-441996994&text= dari ${text}, katanya kamu itu ${pd} `;
                   }
               })()
           }
